Wed Jun 23 10:23:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Deployment/descriptors/Plan.cdp
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Ports/Hello.mpc
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Ports/Hello_defn.idl
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Ports/Hello_obj.idl
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Receiver_comp/src/Hello_Receiver_comp.mpc
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Receiver_comp/src/Hello_Receiver_comp_exec.cpp
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp.mpc
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.cpp
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.h
        Implement _defn.idl, improve mpc files, clean code .

Wed Jun 23 10:22:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
          Catch exceptions as const, initialise pointers to 0 and fixed
          an incorrect log line

Wed Jun 23 08:58:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.h:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.cpp: